c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_ByteSize(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_CheckTypeAndMergeFrom(i18n::phonenumbers::NumberFormat* this_ptr, const google::protobuf::MessageLite* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_Clear(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_CopyFrom(i18n::phonenumbers::NumberFormat* this_ptr, const i18n::phonenumbers::NumberFormat* from);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_DiscardUnknownFields(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_GetCachedSize(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_GetTypeName_as_ptr(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_GetTypeName_to_output(const i18n::phonenumbers::NumberFormat* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* output);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_IsInitialized(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_MergeFrom(i18n::phonenumbers::NumberFormat* this_ptr, const i18n::phonenumbers::NumberFormat* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_New_arena(const i18n::phonenumbers::NumberFormat* this_ptr, google::protobuf::Arena* arena);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_New_no_args(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_Swap(i18n::phonenumbers::NumberFormat* this_ptr, i18n::phonenumbers::NumberFormat* other);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_char(i18n::phonenumbers::NumberFormat* this_ptr, const char* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_char_unsigned_long(i18n::phonenumbers::NumberFormat* this_ptr, const char* value, unsigned long size);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_no_args(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char(i18n::phonenumbers::NumberFormat* this_ptr, const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* value);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_domestic_carrier_code_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_format(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_leading_digits_pattern(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_national_prefix_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_national_prefix_optional_when_formatting(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_pattern(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_constructor_from(const i18n::phonenumbers::NumberFormat* from, i18n::phonenumbers::NumberFormat* output);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_constructor_no_args(i18n::phonenumbers::NumberFormat* output);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_default_instance();
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_delete(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_destructor(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_domestic_carrier_code_formatting_rule(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_format(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_domestic_carrier_code_formatting_rule(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_format(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_national_prefix_formatting_rule(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_national_prefix_optional_when_formatting(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_pattern(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_leading_digits_pattern_index(const i18n::phonenumbers::NumberFormat* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT const google::protobuf::RepeatedPtrField< std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_leading_digits_pattern_no_args(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_leading_digits_pattern_size(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_domestic_carrier_code_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_format(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_leading_digits_pattern_index(i18n::phonenumbers::NumberFormat* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT google::protobuf::RepeatedPtrField< std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_leading_digits_pattern_no_args(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_national_prefix_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_pattern(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_unknown_fields(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_national_prefix_formatting_rule(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_national_prefix_optional_when_formatting(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_new_from(const i18n::phonenumbers::NumberFormat* from);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_new_no_args();
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_operator_assign(i18n::phonenumbers::NumberFormat* this_ptr, const i18n::phonenumbers::NumberFormat* from);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_pattern(const i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_domestic_carrier_code_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_format(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_national_prefix_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_pattern(i18n::phonenumbers::NumberFormat* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT void libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_domestic_carrier_code_formatting_rule(i18n::phonenumbers::NumberFormat* this_ptr, std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* domestic_carrier_code_formatting_rule);