src/ffi.rs


  // Header: phonemetadata.pb.h
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_ByteSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_CheckTypeAndMergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, from: *const ::message_lite::google::protobuf::MessageLite);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_Clear(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_CopyFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, from: *const ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_DiscardUnknownFields(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_GetCachedSize(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_GetTypeName_as_ptr
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_GetTypeName_to_output(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat, output: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_IsInitialized(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_MergeFrom(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, from: *const ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_New_arena
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat,
     arena: *mut ::arena::google::protobuf::Arena)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_New_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_Swap(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, other: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_char(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_char_unsigned_long(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, value: *const libc::c_char, size: libc::c_ulong);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_no_args
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_add_leading_digits_pattern_std___cxx11_basic_string_char_std_char_traits_char_std_allocator_char
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     value: *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_domestic_carrier_code_formatting_rule(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_format(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_leading_digits_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_national_prefix_formatting_rule(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_national_prefix_optional_when_formatting(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_clear_pattern(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_constructor_from(from: *const ::phonemetadata::i18n::phonenumbers::NumberFormat, output: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_constructor_no_args(output: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_default_instance
    ()
      -> *const ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_delete(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_destructor(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat);
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_domestic_carrier_code_formatting_rule
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_format
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_domestic_carrier_code_formatting_rule(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_format(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_national_prefix_formatting_rule(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_national_prefix_optional_when_formatting(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_has_pattern(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_leading_digits_pattern_index
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat,
     index: libc::c_int)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_leading_digits_pattern_no_args(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> *const ::repeated_field::google::protobuf::RepeatedPtrFieldBasicStringCCharCharTraitsCCharRefAllocatorCCharRefRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_leading_digits_pattern_size(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_domestic_carrier_code_formatting_rule
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_format
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_leading_digits_pattern_index
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     index: libc::c_int)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_leading_digits_pattern_no_args
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::repeated_field::google::protobuf::RepeatedPtrFieldBasicStringCCharCharTraitsCCharRefAllocatorCCharRefRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_national_prefix_formatting_rule
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_pattern
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_mutable_unknown_fields
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_national_prefix_formatting_rule
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_national_prefix_optional_when_formatting(this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_new_from
    (from: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_new_no_args
    ()
      -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_operator_assign
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat,
     from: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_pattern
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_domestic_carrier_code_formatting_rule
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_format
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_national_prefix_formatting_rule
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_release_pattern
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_NumberFormat_set_allocated_domestic_carrier_code_formatting_rule(this_ptr: *mut ::phonemetadata::i18n::phonenumbers::NumberFormat, domestic_carrier_code_formatting_rule: *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef);
